fix navbar issues, on mobile view

--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -3,7 +3,6 @@
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  padding-left: calc(100vw - 100%)
 }
 
 /* NAVBAR */
@@ -74,6 +73,8 @@
     border-radius: 10px;
     padding:0px;
     overflow: hidden;
+    height: 100%;
+    background-color: red;
     position: absolute;
     list-style-type: none;
     background-color: var(--SiteBackground);
@@ -86,6 +87,7 @@
     color:var(--txt-default);
     padding:10px 20px;
   }
+
   
   .changeTheme {
     cursor:pointer;
@@ -241,6 +243,7 @@
       display: flex;
     }
     .burgerMenu{
+      padding: 10px 20px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -281,6 +284,10 @@
     .color2{
       height: 400px;
       display: none;
+    }
+    .navbar{
+      width: 100%;
+      max-width: initial;
     }
   }
 
